css/style.css
@font-face{
  font-family: "Neue Montreal Medium";
  src:url('fonts/NeueMontreal-Medium.otf');
}

@font-face{
  font-family: "Neue Montreal";
  src:url('fonts/NeueMontreal-Regular.otf');
}

@font-face{
  font-family: "Saol Display Reg";
  src:url('fonts/SaolDisplay-RegularItalic.otf');
}
@font-face{
  font-family: "Saol Display";
  src:url('fonts/SaolDisplay-LightItalic.otf');
}

@font-face{
  font-family: "Reconna";
  src:url('fonts/ReconnaSerif.otf');
}



html{
 min-height:100vh;
 background-color: #f2f2f2;
}
::selection{
  background-color: yellow;
}
body {
	font-family: 'Neue Montreal Medium';
	font-size: 17px;
	line-height: 1.15;
	color: black;
  overflow-x: hidden;
  margin:0;
}
a{
  transition:.325s;
}
.dot{
  font-size: 17px;
  font-family: 'Saol Display Reg';
  font-style:italic;
}
.main{
  /*grid-template-columns: 29% 35.5% 35.5%;*/
  padding-left: 10px;
}
.top{
  position:absolute;
  z-index:100;
  display:grid;
  width: 100vw;
  /*grid-template-columns: 35% 32.5% 32.5%;*/
  grid-template-columns: 29% 35.5% 28% 7.5%;
  flex-direction: row;
  padding-top:12px;

transition-property: background-color, box-shadow;
transition-duration: 0.5s, .5s;
-webkit-transition: background-color 0.5s linear;
-ms-transition: background-color 0.5s linear;
transition: background-color 0.5s linear;
}

.top p, .top a, .bottom a, #projfooter, .mobilecontact{
  color: black;
  font-family: 'Neue Montreal Medium';
  font-size: 1.8rem;
  text-align: left;
  cursor: pointer;
  /*padding-right:10px;*/
}

.top, .bottom{
  z-index:10;
}

.bottom{
  display: flex;
  flex-direction: column;
  padding:0;
  margin-bottom:10px;
	bottom: 0;
  left: 10px;
  position: fixed;
}
.bottom a{
  margin:0px;
}
a{
  color:black;
  text-decoration: none;
  display:inline;
}
.flip{
  transition: .2s;
  text-align:left;
  justify-content:flex-start;
}
.about{
  justify-self:flex-start;
}
.list{
  justify-self:flex-start; 
}

/*-------------------------------------about----------------------------------------*/
#aboutContainer{
  display:block;
  height:auto;
  width:100%;
  min-height:10px;
}
#about{
 max-width: 100%;
 display: grid;
 /*grid-template-columns: 29% 35.5% 35.5%;*/
 grid-template-columns: 29% 35.5% 28% 7.5%;
 grid-template-rows: auto;
 border-bottom:1px black solid;
}

#about p{
  line-height:1.25;
  padding:0;
  margin:0;
}
#about .p{
  margin-left:8px;
  grid-row:1;
  grid-column:2;
  padding-right:30px;
  padding-bottom:14px;
}
#about img{
  padding-right: 10px;
  max-height:200px;
  max-width: 92%;
  width:auto;
  transition:.2s;
  padding-left:12px;
  grid-column:1;
  grid-row:1;
  margin-right:10px;
  margin-top:2px;
  justify-self:flex-start;
  align-self:flex-start;
  padding-bottom:14px;
}
#about .contact{
  line-height:1.175;
  display:inline-block;
  justify-content:flex-start;
  text-align:left;
  padding-right:24px;
  padding-left:10px;
  grid-column:3;
  grid-row:1;
  padding-bottom:14px;
}
#about .mobilecontact{
  display:none;
  padding-left:4px;
  grid-row:3;
  grid-column:1;
  line-height:1;
  flex-direction:row;
  flex-wrap:wrap;
  padding-bottom:14px;
  transition:.2s; 
  justify-content:flex-start;
}
.contact a:hover, .p a:hover, .listing a:hover, .more a:hover, #description a:hover{
  background-color: yellow;
}
/*---------------------------------------------index-------------------------------*/
#fullindex{
  position:relative;
  margin:0;
  padding:0;
  padding-left:0px;
  width:100%;
  top:70px;
}
.listing{
  max-width: 100%;
  display: grid;
  padding-left:12px;
  padding-top:12px;
  padding-bottom:10px;
  align-items:center;
  /*grid-template-columns: 29% 35.5% 35.5%;*/
  grid-template-columns: 29% 35.5% 28% 7.5%;
  border-bottom:1px solid black;
  cursor:pointer;
  transition: .3s;
}

.title, .description, .thumbnails{
  grid-row:1;
}
.title, .description{
  transition:.3s;
  padding-right:20px;
  line-height:1.2;
  display:inline;
  align-self:start;
}
.thumbnails{
  grid-column:3;
  padding-right:4px;
  /*display:flex;*/
  display:none;
  justify-content:flex-end;
}
.thumbnails img{
  height:26px;
  padding-right:6px;
  display:inline-block;
}
.extender{
  max-width: 100%;
  display: grid;
  grid-column:1/span 4;
  grid-template-columns: 29% 71%;
  grid-template-rows: auto auto auto;
  padding-top:10px;
  padding-right:10px;
  grid-row:2;
}

.images img{
  width:50%;
  height:auto;
  padding-right:10px;
}
.images{
  max-width:100%;
  grid-column:2;
  grid-row: 1/span 3;
  display:flex;
  flex-direction:row;
  align-items:flex-start;
  justify-content:flex-start;
  padding-right:10px;
}
.words{
  font-family: 'Neue Montreal';
  position:relative;
  max-width:90%;
  line-height:1.3;
  transition:.2s;
  padding-bottom:16px;
}
/*.listing:not(.firstfeature) .words{
  display:none;
}*/
.type{
  grid-column:3;
  grid-row:1;
  align-self:flex-start;
  padding-right:14px;
}
.year{
  display:inline-flex;
  position:relative;
  /*grid-column:3;
  grid-row:1;
  align-self:flex-start;*/
  grid-column:4;
  grid-row:1;
  align-self:flex-start;
  align-content:right;
  justify-self:flex-end;
}
.year span{
  position:relative;
  margin-right: 14px;
}
.projpage{
  grid-row:3;
  grid-column:1;
  justify-self:flex-start;
  align-self:start;
}
.extender a, .more a, .contact a, .words a, .words i, .p a{
  transition: background-color, box-shadow;
  transition-duration:.3s;
  /*border-radius:8px;*/
  font-family: "Neue Montreal Medium";
  /*text-decoration:underline;*/
}
.words a, .words i{
  font-family: "Neue Montreal Medium";
}
.more{
  margin-top:20px;
  padding-left:10px;
  padding-right:10px;
  line-height:1.2;
  margin-bottom:28px;
  background-color:#f2f2f2;
  display:flex;
  flex-direction:row;
  justify-content:space-between;
}
/*---------------------------------meeeeeeeeeedia queeeeeeeeriiiiiiiiiiiiesssssss-----------*/


/*@media (max-width:1000px){
  body{
      font-size:15px;
  }
  .title, .description, .details, .more{
    font-size: 17px;
  }
}*/
@media (max-width: 900px){

  #about .p{
    padding-bottom:20px;
    padding-right:14px;
  }
  body{
    font-size:17px;
  }
}

@media (max-width: 700px){
 .year{
    display:none;
  }
  #about{
    padding-top:30px;
    display:none;
    grid-template-columns: 29fr 71fr;
    grid-column-gap:10px;
    grid-template-rows: auto auto;
    padding-left:5px;
    padding-right:15px;
    border-bottom:none;
  }
  #about .p{
    font-size:22px;
    padding-right: 6px;
    padding-bottom:8px;
    font-family: 'Neue Montreal Medium';
    grid-column:1/span 2;
    padding-right:6px;
    grid-row:1;
    padding-right:20px;
    border-bottom:1px black solid;
    margin-bottom:8px;
  }
  #about img{
    display:block;
    max-width:100%;
    max-height:100%;
    padding:0;
    padding-left:5px;
    padding-bottom:10px;
    grid-row:2;
    grid-column:1/span 2;
    padding-right:10px;
  }
  #about .contact{
    display:none;
  }
  #about .mobilecontact{
    display:flex;
    flex-direction:column;
    grid-column:2;
    font-size:22px;
  }
  #about span{
    font-size:22px;
    grid-column:1;
    padding-left:5px;
  }
  .list{
    /*display:none;*/
    justify-self:flex-end;
    margin-right:10px;
  }
  .thumbnails img:nth-of-type(3){
    display:none;
  }
  .thumbnails{
    display:flex;
    grid-column:3/span 4;
  }
#fullindex{
  top:20px;
}
.listing{
  font-size:22px;
  padding-top:8px;
  padding-bottom:8px
}
.description,.type{
  display:none;
}
.title{
  align-self:end;
  grid-column:1/span 4;
}
.firstfeature .title, .firstfeature .thumbnails{
  grid-row:3;
  padding-top: 14px;
}
.firstfeature .images img:nth-of-type(2){
  display:none;
}
.firstfeature .images img:first-of-type{
  width:100%;
}
.firstfeature .images{
  grid-column:1/span 4;
  padding-right:0px;
}
.listing:not(.firstfeature) .extender{
  display:none;
}


.more span:nth-of-type(2){
  display:none;
}
.more{
  padding-bottom:20px;
  bottom:10px;
}


  .flip:hover{
    transform:rotateY(0deg);
  }
  .top p, .top a, .bottom a, .bottom a, .flip{
    font-size: 24px;
  }
}







.querytown{
  z-index:1000;
  width:300px;
  font-size:2em;
  color:white;
  margin-top:10vh;
  margin-left:50px;
  position:fixed;
  text-align:center;
  background-color:red;
}

